--- a/index.html
+++ b/index.html
@@ -5,103 +5,37 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="style.css">
-  <style>
-
-  </style>
   <title>You're Invited</title>
 </head>
 
 <body>
-  <h1>You're Invited</h1>
+  <h1>You're Invited to all our parties</h1>
     <img src="assets/knot1.png"></img>
-    <h2>How many kinds of parties can you name?</h2>
+    
     <div class="my-fun-class">
+    <h2>
       <ul>
-        <li>
-          tea party
-        </li>
-        <li>rave</li>
-        <li>gender reveal party</li>
-        <li>bachelorette party</li>
-        <li>release party</li>
-        <li>bday party</li>
-        <li>graduation party</li>
-        <li>prom</li>
-        <li>homecoming</li>
-        <li>halloween party</li>
-        <li>holiday party</li>
-        <li>reading party</li>
-        <li>block party</li>
-        <li>
-          housewarming party
-        </li>
-        <li>
-          dance party
-        </li>
-        <li>
-          poetry slam party
-        </li>
-        <li>
-          pot luck
-        </li>
-        <li>
-          anniversary party
-        </li>
-        <li>
-          afterparty
-        </li>
-        <li>
-          sleepover party
-        </li>
-        <li>
-          solstice party
-        </li>
-        <li>
-          pool party
-        </li>
-
+<li>
+  <a href=/Junyi>Junyi</a>
+</li>
+<li>
+  <a href=/gnaiq>Qiang</a>
+</li>
+<li>
+  <a href=/linnea>Sara</a>
+</li>
+<li>
+  <a href=/darnell>Darnell</a>
+</li>
+<li>
+  <a href=/melanie>Melanie</a>
+</li>
       </ul>
+    </h2>
 
     </div>
 
-    <h2>Describe the last party you particularly enjoyed. What happened there? What was the structure? Were there tickets, performances, rituals, gifts?</h2>
-    <div class="my-fun-class">
-      <marquee>
-        New Years Eve 2019 into 2022
-      </marquee>
-      <div class="red">
-  <div class="orange">
-    <div class="yellow">
-      <div class="green">
-        <div class="blue">
-          <div class="violet">
-            <p>
-                Portal ripped open. The last hurrah. A choral countdown ritual. Everyone counting down: 10 ten Ten t3n tenn tennn TEN 10 nine NINE NIIINE niiiine ninnnne 9 EIGHT EIGHT eeiiight eigght 8 SEVEN sevennn seven seven sevvvenn 7 SIX sixxxx six sssssssix 6 FIVE fiveee fivee 5 FOUR FFOOUURR fourrrr four 4 THREE threeee ttthreeeeeeee 3 TWO two two two two tttwwo 2 ONE ONE ONE ONE OOONNEEE 1. Spermfetti falls from the ceiling. Three hundred people unaware of what is to come, an ignorant buzzing swarm. One person broke through needing care, care was provided. Instability was supported. Chaos and care a powerful combination. Money was made, about $300 after expenses, I was a primary organizer, labor was unpaid. Others bought tickets, $20 or pay what you can, members of a shared collective artist warehouse space pay rent for their studios which pays for the space itself to be in the hands of an artist community. There were projections on the wall, a projected markov chain of diary entries. Im combining party memories, that's ok.
-              </p></div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
 
-    </div>
-
-    <h3>How did you hear about this party? How were you invited?</h3>
-    <div class="my-fun-class">
-      <p>
-        I organized it! New years eve is my birthday. There was an eventbrite. Each member of the space could invite 10-15 friends.
-      </p>
-    </div>
-
-    <h3>How did this party end? How was it cleaned up after?</h3>
-    <div class="my-fun-class">
-      <p>
-        The ritual choir and spermfetti marked the end of the decade. 2020. There was fire and hot tub. The fire goes out, the hot tub empties. There was a communal cleanup day afterwards. Electrolyte drinks were made.
-      </p>
-    </div>
-
-
-      <p>🦆A Website can be: <a href="https://www.are.na/ian-mcdonald/an-idea-for-a-website">**********</a><p>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="script.js"></script>
 </body>
