--- a/gnaiq/index.html
+++ b/gnaiq/index.html
@@ -51,7 +51,6 @@
           Wedding party
         </li>
       </ul>
-
     </div>
 
     <h2>Describe the last party you particularly enjoyed. What happened there? What was the structure? Were there tickets, performances, rituals, gifts?</h2>
@@ -79,6 +78,7 @@
       <p>
         The party ended in singing. Before everyone left, we helped clean up the dishes for the host.
       </p>
+      <img src="assets/shoes.jpeg">
     </div>
 
       <p>🦆A Website can be: <a href="https://www.are.na/ian-mcdonald/an-idea-for-a-website">**********</a><p>
