--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <body>
   <h1>You're Invited to all our parties</h1>
     <img src="assets/knot1.png"></img>
-    
+
     <div class="my-fun-class">
     <h2>
       <ul>
 <li>
-  <a href=/Junyi>Junyi</a>
+  <a href=our-parties/Junyi>Junyi</a>
 </li>
 <li>
   <a href=/gnaiq>Qiang</a>
