--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
     <h2>
       <ul>
 <li>
-  <a href=our-parties/Junyi>Junyi</a>
+  <a href=Junyi/index.html>Junyi</a>
 </li>
 <li>
-  <a href=/gnaiq>Qiang</a>
+  <a href=gnaiq/index.html>Qiang</a>
 </li>
 <li>
-  <a href=/linnea>Sara</a>
+  <a href=linnea/index.html>Sara</a>
 </li>
 <li>
-  <a href=/darnell>Darnell</a>
+  <a href=darnell/index.html>Darnell</a>
 </li>
 <li>
-  <a href=/melanie>Melanie</a>
+  <a href=melanie/index.html>Melanie</a>
 </li>
       </ul>
     </h2>
