--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <a href=/Junyi/index.html>Junyi</a>
 </li>
 <li>
-  <a href=/gnaiq/>Qiang</a>
+  <a href=/gnaiq/index.html>Qiang</a>
 </li>
 <li>
   <a href=/linnea/index.html>Sara</a>
