--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
     <h2>
       <ul>
 <li>
-  <a href=/Junyi/index.html>Junyi</a>
+  <a href=https://www.melaniehoff.com/our-parties/Junyi/index.html>Junyi</a>
 </li>
 <li>
-  <a href=/gnaiq/index.html>Qiang</a>
+  <a href=https://www.melaniehoff.com/our-parties/gnaiq/index.html>Qiang</a>
 </li>
 <li>
-  <a href=/linnea/index.html>Sara</a>
+  <a href=https://www.melaniehoff.com/our-parties/linnea/index.html>Sara</a>
 </li>
 <li>
-  <a href=/darnell/index.html>Darnell</a>
+  <a href=https://www.melaniehoff.com/our-parties/darnell/index.html>Darnell</a>
 </li>
 <li>
-  <a href=/melanie/index.html>Melanie</a>
+  <a href=https://www.melaniehoff.com/our-parties/melanie/index.html>Melanie</a>
 </li>
       </ul>
     </h2>
