--- a/linnea/index.html
+++ b/linnea/index.html
@@ -4,126 +4,81 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <title>You're Invited</title>
+  <title>Speculative party planning</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC&family=Alegreya+Sans:ital@0;1&display=swap" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="party-style.css">
+<style type="text/css" media="screen"></style>
+<script type="text/javascript">
+function replace( hide, show ) {
+  document.getElementById(hide).style.display="none";
+  document.getElementById(show).style.display="block";
+}
+</script>
 </head>
 
+
 <body>
-  <h1>You're Invited</h1>
-    <img src="assets/knot1.png"></img>
-    <h2>How many kinds of parties can you name?</h2>
-    <div class="invite-me-to-your-party">
-      <ul>
-        <li>
-          Birthday party
-        </li>
-        <li>
-          Rave
-        </li>
-        <li>
-          name giving ceremony
-        </li>
-        <li>
-          graduation party
-        </li>
-        <li>
-          holiday party
-        </li>
-        <li>
-          housewarming
-        </li>
-        <li>
-          reading party
-        </li>
-        <li>
-         launch party
-        </li>
-        <li>
-         wrap party
-        </li>
-        <li>
-         mud wrestling party
-        </li>
-        <li>
-         farewell party
-        </li>
-        <li>
-         anniversary
-        </li>
-        <li>
-         office party
-        </li>
-        <li>
-         release party
-        </li>
-        <li>
-         costume party
-        </li>
-        <li>
-         clothing swap
-        </li>
-        <li>
-         tattoo party
-        </li>
-        <li>
-         stitch and bitch
-        </li>
-        <li>
-         drink and draw
-        </li>
-        <li>
-         party planning party
-        </li>
-        <li>
-         wedding
-        </li>
-        <li>
-         beach party
-        </li>
-        <li>
-         jam session
-        </li>
-
-        <li>
-         bring your lampshade, somewhere there&#39;s a party
-        </li>
-
-      </ul>
-
-    </div>
-
-    <h2>Describe the last party you particularly enjoyed. What happened there? What was the structure? Were there tickets, performances, rituals, gifts?</h2>
-    <div class="champagne-in-cambridge">
-      <p>
-
-I was just talking about the best christmas celebration in my adult life, so that is the first thing that comes to mind. My friend Karolina from stockholm had just given birth to Ruth at the end of spring, and then at the end of summer she moved with her husband Jon to cambridge for a six month exchange at harvard. Ruth was one month old when she got her first passport. So for the first time since 2012 Karolina, Kira and I who all knew eachother from highschool were (basically) in the same place for christmas, and while in stockholm we would never celebrate together - as we&#39;d celebrate with our immediate families. So Kira and I who both live in new york travelled up to cambrige, I think maybe on the megabus. There has been a snow storm so it was so so so snowy everywhere which reminded us all of christmas in sweden. And it was just the perfect algamation of four people that really like eachother and who had very similar experations and hopes around christmas and a cute baby.
-
-So we dressed up, drank champagne, made and ate delicious food, rhymed for our gifts, sang drinking songs,  light every candle and celebrated on the night of the 24th as we have always done. And then we took a nice long walk while the whole city was empty on the next day.
-      </p>
-    </div>
-
-    <h3>How did you hear about this party? How were you invited?</h3>
-    <div class="group-chat-planning">
-      <p>
-        <marquee>
-        I think that as soon as we new that they were coming for the whole fall semester we all three descided that we&#39;d be celebrating christmas together. I&#39;m assuming that that this all was decided over some sort of group chat. And neither Karolina and Jon had an apartment to themselves in cambridge and I think both Kira and I had roommates so it made sense for us to be there.
-        </marquee>
-      </p>
-    </div>
-
-    <h3>How did this party end? How was it cleaned up after?</h3>
-    <div class="a-broad-feeling-at-home-abroad">
-      <p>
-        <marquee>
-It was a natural progression of all helping to cook, and then all helping to clean. And we were a bit drunk so the cleaning the night of wasn&#39;t too thorough, but then we all cleaned the next day. Feeling a bit outside here and a bit outside in stockholm, I felt extremly at home in this small apartment with people I&#39;ve known for more than a decade, and who are also people with a strong connection to sweden but with a strong desire to live abroad. All four (five with Ruth, now six with Knut) of us all currently live outside of sweden. So there was a perfect mix of old traditions and making new ones.
-</marquee>
-      </p>
-    </div>
+  <div class="text">
+  <h1> Speculative party planning </h1>
+</br>
+  <div>
+  <h3> capacities </h3>
+  <h2> I can</h2>
+  <div id = "div1" style="display:block" onclick = "replace('div1','div2')"><h2>cook a nice buttnut squash soup</h2></div>
+  <div id = "div2" style="display:none" onclick = "replace('div2','div3')"> <h2>sew a little pouch you can use as a wallet</h2></div>
+  <div id = "div3" style="display:none" onclick = "replace('div3','div4')"><h2>bind a book</h2></div>
+  <div id = "div4" style="display:none" onclick = "replace('div4','div5')"><h2>make nice herbal tea</h2></div>
+  <div id = "div5" style="display:none" onclick = "replace('div5','div6')"><h2>carry a lot of thing</h2></div>
+  <div id = "div6" style="display:none" onclick = "replace('div6','div7')"><h2>design an invite</h2></div>
+  <div id = "div7" style="display:none" onclick = "replace('div7','div8')"><h2>clean the dishes</h2></div>
+  <div id = "div8" style="display:none" onclick = "replace('div8','div9')"><h2>identify some plants in NY</h2></div>
+  <div id = "div9" style="display:none" onclick = "replace('div9','div10')"><h2>make a nice speech at a wedding for a friend</h2></div>
+  <div id = "div10" style="display:none" onclick = "replace('div10','div11')"><h2>dance enthusistically</h2></div>
+<div id = "div11" style="display:none" onclick = "replace('div11','div12')"><h2>call my family</h2></div>
+<div id = "div12" style="display:none" onclick = "replace('div12','div13')"><h2>walk pretty far</h2></div>
+<div id = "div13" style="display:none" onclick = "replace('div13','div14')"><h2>strech my body</h2></div>
+<div id = "div14" style="display:none" onclick = "replace('div14','div15')"><h2>text my friends</h2></div>
+<div id = "div15" style="display:none" onclick = "replace('div15','div1')"><h2>bike over to your house</h2></div>
 
 
-      <p>🦆A Website can be: <a href="https://www.are.na/ian-mcdonald/an-idea-for-a-website">**********</a><p>
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="script.js"></script>
+
+
+</div>
+<div>
+<h3> inspirations </h3>
+<h2> I like to </h2>
+<div id = "1" style="display:block" onclick = "replace('1','2')"><h2>people watch</h1></div>
+<div id = "2" style="display:none" onclick = "replace('2','3')"> <h2>listen to the birds outside the window</h2></div>
+<div id = "3" style="display:none" onclick = "replace('3','4')"><h2>the light coming in through the kitchen window</h2></div>
+<div id = "4" style="display:none" onclick = "replace('4','5')"> <h2>eat breakfast by candle light</h2></div>
+<div id = "5" style="display:none" onclick = "replace('5','6')"><h2>read at a cafe </h2></div>
+<div id = "6" style="display:none" onclick = "replace('6','7')"> <h2>drink a lot of coffee</h2></div>
+<div id = "7" style="display:none" onclick = "replace('7','8')"><h2>make speculative realities</h2></div>
+<div id = "8" style="display:none" onclick = "replace('8','9')"> <h2>learn about myths</h2></div>
+<div id = "9" style="display:none" onclick = "replace('9','10')"><h2>listen to well-made playlists with soft romantic music</h2></div>
+<div id = "10" style="display:none" onclick = "replace('10','11')"> <h2>make and share an elaborate meal</h2></div>
+<div id = "11" style="display:none" onclick = "replace('11','12')"> <h2>listen to the radio</h2></div>
+  <div id = "12" style="display:none" onclick = "replace('12','1')"> <h2>tend to my houseplants</h2></div>
+
+</div>
+<div>
+<h3> potential parties </h3>
+<h2> let us have</h2>
+<div id = "a" style="display:block" onclick = "replace('a','b')"><h2>a butternut soup myth making party </h2></div>
+<div id = "b" style="display:none" onclick = "replace('b','c')"> <h2>an ask your friends to contribute to a communal playlist for a tea party</h2></div>
+<div id = "c" style="display:none" onclick = "replace('c','d')"> <h2>an early morning candle lit breakfast party on a call with my family</h2></div>
+<div id = "d" style="display:none" onclick = "replace('d','e')"> <h2>a I bike over to your house for a bird watching and listening party</h2></div>
+<div id = "e" style="display:none" onclick = "replace('e','f')"> <h2>a party where we start a radio station and make and transmit playlists with soft romantic music </h2></div>
+<div id = "f" style="display:none" onclick = "replace('f','g')"> <h2>an elaborate meal I made and we carry over to the park for a picnic</h2></div>
+<div id = "g" style="display:none" onclick = "replace('g','h')"> <h2>a party where i bike to my firends houses and document their favorite houseplants in a book I bound</h2></div>
+<div id = "h" style="display:none" onclick = "replace('h','i')"> <h2>a party for me and my houseplants when we strech in the morning light</h2></div>
+<div id = "i" style="display:none" onclick = "replace('i','j')"> <h2>a walk to new cafes and read together party</h2></div>
+<div id = "j" style="display:none" onclick = "replace('j','a')"> <h2><a href="flag-invite.html">a flag making party</a></h2></div>
+</div>
+</br>
+</br>
+</div>
 </body>
-
 </html>
